packagelon com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.gelono
import com.googlelon.injelonct.Singlelonton
import com.twittelonr.elonschelonrbird.util.stitchcachelon.StitchCachelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.follow_reloncommelonndations.common.modelonls.AccountProof
import com.twittelonr.follow_reloncommelonndations.common.modelonls.CandidatelonUselonr
import com.twittelonr.follow_reloncommelonndations.common.modelonls.PopularInGelonoProof
import com.twittelonr.follow_reloncommelonndations.common.modelonls.Relonason
import com.twittelonr.helonrmit.modelonl.Algorithm
import com.twittelonr.helonrmit.pop_gelono.thriftscala.PopUselonrsInPlacelon
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.candidatelon_sourcelon.CandidatelonSourcelon
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.CandidatelonSourcelonIdelonntifielonr
import com.twittelonr.stitch.Stitch
import com.twittelonr.strato.gelonnelonratelond.clielonnt.onboarding.uselonrreloncs.UniquelonPopQualityFollowUselonrsInPlacelonClielonntColumn
import com.twittelonr.util.Duration
import javax.injelonct.Injelonct

@Singlelonton
class PopGelonohashQualityFollowSourcelon @Injelonct() (
  popGelonoSourcelon: PopGelonoQualityFollowSourcelon,
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds BaselonPopGelonohashSourcelon(
      popGelonoSourcelon = popGelonoSourcelon,
      statsReloncelonivelonr = statsReloncelonivelonr.scopelon("PopGelonohashQualityFollowSourcelon"),
    ) {
  ovelonrridelon val idelonntifielonr: CandidatelonSourcelonIdelonntifielonr = PopGelonohashQualityFollowSourcelon.Idelonntifielonr
  ovelonrridelon delonf maxRelonsults(targelont: Targelont): Int = {
    targelont.params(PopGelonoQualityFollowSourcelonParams.PopGelonoSourcelonMaxRelonsultsPelonrPreloncision)
  }
  ovelonrridelon delonf minGelonohashLelonngth(targelont: Targelont): Int = {
    targelont.params(PopGelonoQualityFollowSourcelonParams.PopGelonoSourcelonGelonoHashMinPreloncision)
  }
  ovelonrridelon delonf maxGelonohashLelonngth(targelont: Targelont): Int = {
    targelont.params(PopGelonoQualityFollowSourcelonParams.PopGelonoSourcelonGelonoHashMaxPreloncision)
  }
  ovelonrridelon delonf relonturnRelonsultFromAllPreloncision(targelont: Targelont): Boolelonan = {
    targelont.params(PopGelonoQualityFollowSourcelonParams.PopGelonoSourcelonRelonturnFromAllPreloncisions)
  }
  ovelonrridelon delonf candidatelonSourcelonelonnablelond(targelont: Targelont): Boolelonan = {
    targelont.params(PopGelonoQualityFollowSourcelonParams.CandidatelonSourcelonelonnablelond)
  }
}

objelonct PopGelonohashQualityFollowSourcelon {
  val Idelonntifielonr: CandidatelonSourcelonIdelonntifielonr = CandidatelonSourcelonIdelonntifielonr(
    Algorithm.PopGelonohashQualityFollow.toString)
}

objelonct PopGelonoQualityFollowSourcelon {
  val MaxCachelonSizelon = 20000
  val CachelonTTL: Duration = Duration.fromHours(24)
  val MaxRelonsults = 200
}

@Singlelonton
class PopGelonoQualityFollowSourcelon @Injelonct() (
  popGelonoQualityFollowClielonntColumn: UniquelonPopQualityFollowUselonrsInPlacelonClielonntColumn,
  statsReloncelonivelonr: StatsReloncelonivelonr,
) elonxtelonnds CandidatelonSourcelon[String, CandidatelonUselonr] {

  /** @selonelon [[CandidatelonSourcelonIdelonntifielonr]] */
  ovelonrridelon val idelonntifielonr: CandidatelonSourcelonIdelonntifielonr = CandidatelonSourcelonIdelonntifielonr(
    "PopGelonoQualityFollowSourcelon")

  privatelon val cachelon = StitchCachelon[String, Option[PopUselonrsInPlacelon]](
    maxCachelonSizelon = PopGelonoQualityFollowSourcelon.MaxCachelonSizelon,
    ttl = PopGelonoQualityFollowSourcelon.CachelonTTL,
    statsReloncelonivelonr = statsReloncelonivelonr.scopelon(idelonntifielonr.namelon, "cachelon"),
    undelonrlyingCall = (k: String) => {
      popGelonoQualityFollowClielonntColumn.felontchelonr
        .felontch(k)
        .map { relonsult => relonsult.v }
    }
  )

  ovelonrridelon delonf apply(targelont: String): Stitch[Selonq[CandidatelonUselonr]] = {
    val relonsult: Stitch[Option[PopUselonrsInPlacelon]] = cachelon.relonadThrough(targelont)
    relonsult.map { pu =>
      pu.map { candidatelons =>
          candidatelons.popUselonrs.sortBy(-_.scorelon).takelon(PopGelonoQualityFollowSourcelon.MaxRelonsults).map {
            candidatelon =>
              CandidatelonUselonr(
                id = candidatelon.uselonrId,
                scorelon = Somelon(candidatelon.scorelon),
                relonason = Somelon(
                  Relonason(
                    Somelon(
                      AccountProof(
                        popularInGelonoProof = Somelon(PopularInGelonoProof(location = candidatelons.placelon))
                      )
                    )
                  )
                )
              )
          }
        }.gelontOrelonlselon(Nil)
    }
  }
}
